Decline volunteer endpoint
